# kubeowler

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  build-multi-arch.sh  build.sh
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
deploy/node-inspector/: Dockerfile  build-push-multiarch.sh  daemonset.yaml
docs/: 01-installation-guide.md  02-docker-guide.md  03-development-guide.md  04-linux-dev-setup.md  05-troubleshooting.md  06-node-inspector-build-deploy.md  07-data-collection.md  08-node-inspection-schema.md  09-node-inspector-collection-gaps.md  10-node-inspector-limitations.md  README.md  build-and-test.md  cli-reference.md  data-collection.md  development-environment.md  development-guide.md  docker-and-kubernetes.md  go-migration-plan.md  installation.md  node-inspection-schema.md  node-inspector-build-deploy.md  node-inspector-collection-gaps.md  node-inspector-limitations.md
docs/issues/: AUTO-001.md  AUTO-002.md  AUTO-003.md  AUTO-004.md  AUTO-005.md  BATCH-001.md  BATCH-002.md  BATCH-003.md  BATCH-004.md  BATCH-005.md  CERT-001.md  CERT-002.md  CERT-003.md  CTRL-001.md  CTRL-002.md  NET-001.md  NET-002.md  NET-003.md  NET-004.md  NET-005.md  NODE-001.md  (+49 more)
example/: cluster-1-inspection.csv  cluster-1-inspection.html  cluster-1-inspection.json  cluster-1-inspection.md  kubeowler-report.html  kubeowler-report.md  report.html  report.md
scripts/: node-check-universal.sh
src/: lib.rs  main.rs
tests/: cli_tests.rs  reporting_tests.rs  scoring_tests.rs
(+36 files in other folders)
